--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aurion Finance - Premium USDT Investment Platform</title>
+    <title>Aurion Finance - Where Blockchain Meets Sustainable Growth</title>
     <link rel="icon" type="image/png" href="https://files.catbox.moe/3o41t1.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -2992,7 +2992,7 @@
             <div class="container">
                 <div class="section__header">
                     <h2 class="section__title">Official Documents</h2>
-                    <p class="section__subtitle">Download the Aurion Club whitepaper in your preferred language.</p>
+                    <p class="section__subtitle">Download the Aurion Club whitepaper in your preferred language</p>
                 </div>
                 <div class="resources-grid">
                     <!-- English PDF Card -->
@@ -3001,7 +3001,7 @@
                             <i class="fas fa-file-pdf"></i>
                         </div>
                         <h3>Aurion Club (English)</h3>
-                        <p>The official document detailing the project's vision, technology, and investment plans in English.</p>
+                        <p>The official document detailing the project's vision, technology, and investment plans in English</p>
                         <a href="https://www.dropbox.com/scl/fi/dk31agk6l6ng8npot43vd/AurionClubEanglish.pdf?rlkey=mv5x1bu0t4lm1g3k2lwe42tfr&st=pw8nrt4p&dl=1" class="btn btn--primary" download>
                             <i class="fas fa-download"></i> Download PDF
                         </a>
@@ -3012,7 +3012,7 @@
                             <i class="fas fa-file-pdf"></i>
                         </div>
                         <h3>Aurion Club (French)</h3>
-                        <p>The official document detailing the project's vision, technology, and investment plans in French.</p>
+                        <p>The official document detailing the project's vision, technology, and investment plans in French</p>
                         <a href="https://www.dropbox.com/scl/fi/3483we2ufcj5hc4hq9sm9/AurionClubFrench.pdf?rlkey=vo23trsrwfclpn88fayllwdtw&st=nob3df9c&dl=1" class="btn btn--primary" download>
                             <i class="fas fa-download"></i> Download PDF
                         </a>
@@ -3023,7 +3023,7 @@
                             <i class="fas fa-file-pdf"></i>
                         </div>
                         <h3>Aurion Club (Hindi)</h3>
-                        <p>The official document detailing the project's vision, technology, and investment plans in Hindi.</p>
+                        <p>The official document detailing the project's vision, technology, and investment plans in Hindi</p>
                         <a href="https://www.dropbox.com/scl/fi/y6g7gxz5qed0kyec7fdz2/AurionClubHindi.pdf?rlkey=mrva7w8ctemau2lo5dnhzv5ad&st=wtc78za0&dl=1" class="btn btn--primary" download>
                             <i class="fas fa-download"></i> Download PDF
                         </a>
@@ -3034,7 +3034,7 @@
                             <i class="fas fa-file-pdf"></i>
                         </div>
                         <h3>Aurion Club (Portuguese)</h3>
-                        <p>The official document detailing the project's vision, technology, and investment plans in Portuguese.</p>
+                        <p>The official document detailing the project's vision, technology, and investment plans in Portuguese</p>
                         <a href="https://www.dropbox.com/scl/fi/occhss2513487br8zn07w/AurionClubPortuguese.pdf?rlkey=ha7pj8j45m581vnrsiu247vfc&st=pcb757sz&dl=1" class="btn btn--primary" download>
                             <i class="fas fa-download"></i> Download PDF
                         </a>
@@ -3045,7 +3045,7 @@
                             <i class="fas fa-file-pdf"></i>
                         </div>
                         <h3>Aurion Club (Spanish)</h3>
-                        <p>The official document detailing the project's vision, technology, and investment plans in Spanish.</p>
+                        <p>The official document detailing the project's vision, technology, and investment plans in Spanish</p>
                         <a href="https://www.dropbox.com/scl/fi/0wo44jkjx3hl8ftts6ode/AurionClubSpanish.pdf?rlkey=dmtf2u2e5tcafzeggpx6bi9ed&st=1c6iomy4&dl=1" class="btn btn--primary" download>
                             <i class="fas fa-download"></i> Download PDF
                         </a>
